[tool.poetry]
name = "pycloak"
version = "1.2.1"
description = "Utils around Keycloak and other OIDC clients."
readme = "README.md"
authors = ["Blueshoe GmbH"]
license = "Copyright"

[tool.poetry.dependencies]
python = ">=3.8.1"
Django = ">=2.2"
PyJWT = ">=2.4.0"
cryptography = ">=36.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
poethepoet = "^0.25.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
include = "tasks.toml" # include tasks from tasks.toml

[tool.mypy]
mypy_path = "luma"
warn_return_any = "True"
warn_unused_configs = "True"
exclude = [
    "tests",
]
ignore_missing_imports = "True"
