[tool.poetry]
name = "pycloak"
version = "1.2.9"
description = "Utils around Keycloak and other OIDC clients."
readme = "README.md"
authors = ["Blueshoe GmbH"]
license = "Copyright"

[tool.poetry.dependencies]
python = "<3.14"
cryptography = "^44.0.0"
django = "<=4.2"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
poethepoet = "^0.32.2"
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
include = "tasks.toml" # include tasks from tasks.toml

[tool.mypy]
mypy_path = "luma"
warn_return_any = "True"
warn_unused_configs = "True"
exclude = [
    "tests",
]
ignore_missing_imports = "True"
