[tool.poetry]
name = "pycloak"
version = "1.2.10"
description = "Utils around Keycloak and other OIDC clients."
readme = "README.md"
authors = ["Blueshoe GmbH"]
license = "Copyright"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
cryptography = "^46.0.3"
django = "<6"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
poethepoet = "^0.38.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
include = "tasks.toml" # include tasks from tasks.toml

[tool.mypy]
mypy_path = "luma"
warn_return_any = "True"
warn_unused_configs = "True"
exclude = [
    "tests",
]
ignore_missing_imports = "True"
